Fixed bug #22751 (Compile error in gdcache when external libgd is used)